Implemented Async messaging and Feedback loop